HTML added, information on webpage, styling needed.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,80 @@
         <style></style>
     </head>
     <body>
-
+        <div class="container">
+            <div class="nav-bar">
+                <a class="nav-left" href="#About">About</a>
+                <a class="nav-left" href="#Store">Store</a>
+                <div class="nav-right">
+                    <a class="nav-right" href="#Gmail">Gmail</a>
+                    <a class="nav-right" href="#Images">Images</a>
+                </div>
+                <div class="nav-right act-apps">
+                    <a class="nav-right act-apps" href="#Apps-dropdown" role="button"><img src="img/1x/apps-icon-sm.png"></a>
+                    <a class="nav-right act-apps" href="#Account" role="burron"><img src="img/1x/act-icon-sm.png"></a>
+                </div>
+            </div>
+            <div class="google-logo">
+                <img id="google-logo" src="/img/google-logo.png" alt="Google Logo">
+            </div>
+            <div class="search">
+                <form action="/search" role="search">
+                    <div>
+                        <img src="/img/1x/search-icon-sm.png" id="search-icon-sm">
+                    </div>
+                    <div class="search-box">
+                        <input class="search-box" type="text">
+                    </div>
+                    <div>
+                        <a class="search-box" href="#Voice-Search" role="button"><img src="img/1x/mic-icon-sm.png" id="mic-icon-sm"></a>
+                    </div>
+                    <div class="search-button">
+                        <button type="button" class="btn" id="search-submit">Google search</button>
+                        <button type="button" class="btn" id="lucky-submit">I'm Feeling Lucky</button>
+                    </div>
+                </form>
+            </div>
+            <div class="empty"></div>
+            <div class="footer">
+                <div class="footer left-footer">
+                    <a id="advertising" role="button" href="#Advertising">Advertising</a>
+                    <a id="business" role="button" href="#Business">Business</a>
+                    <a id="how-search-works" role="button" href="How Search works">How Search works</a>
+                </div>
+                <div class="footer center-footer">
+                    <a class="carbon-neutral" href="#Carbon-neutral">
+                        <img src="img/leaf.png" id="carbon-neutral-leaf">
+                        <span class="carbon-neutral-since">Carbon neutral since 2007</span>
+                    </a>
+                </div>
+                <div class="footer right-footer">
+                    <a class="privacy-terms" role="button" href="#Privacy">Privacy</a>
+                    <a class="privacy-terms" role="button" href="Terms">Terms</a>
+                    <div class="settings">
+                        <button class="settings-button">Settings</button>
+                        <ul class="settings-menu" role="menu">
+                            <li>
+                                <a class="settings-options" href="#Search-settings" role="menuitem">Search settings</a>
+                            </li>
+                            <li>
+                                <a class="settings-options" href="#Advanced-search" role="menuitem">Advanced search</a>
+                            </li>
+                            <li>
+                                <a class="settings-options" href="#Your-data-in-search" role="menuitem">Your data in search</a>
+                            </li>
+                            <li>
+                                <a class="settings-options" href="#Search-history" role="menuitem">Search history</a>
+                            </li>
+                            <li>
+                                <a class="settings-options" href="#Search-help" role="menuitem">Search help</a>
+                            </li>
+                            <li>
+                                <a class="settings-options" href="#Send-feedback" role="menuitem">Send feedback</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
