All information in HTML for google-homepage, needs oragnization with CSS, trying with bootstrap instead of copying google's css.

--- a/index.html
+++ b/index.html
@@ -2,121 +2,258 @@
 <html lang="en">
     <head>
         <meta charset="UTF_8">
-        <title>Project - Google Homepage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <title>Project - Google Homepage</title>
     </head>
     <body>
-        <div class="container">
-            <div class="nav-bar">
-                <a class="nav-left" href="#About">About</a>
-                <a class="nav-left" href="#Store">Store</a>
-                <div class="nav-right">
-                    <div class="nav-right-1">
-                        <div class="nav-right-2">
-                            <div class="gmail-images">
-                                <div class="gmail">
-                                    <a class="nav-right-selector" href="#Gmail">Gmail</a>
+        <div>
+            <div>
+                <a href="#About">About</a>
+                <a href="#Store">Store</a>
+                <div>
+                    <div>
+                        <div>
+                            <div class="1">
+                                <div>
+                                    <ahref="#Gmail">Gmail</a>
                                 </div>
-                                <div class="images">
-                                    <a class="nav-right-selector" href="#Images">Images</a>
+                                <div>
+                                    <ahref="#Images">Images</a>
                                 </div>
                             </div>
-                            <div class="act-apps-1">
-                                <div class="right-apps">
-                                    <div class="right-apps-1">
-                                        <div calss="right-apps-2">
-                                            <a class="apps" href="#Apps-dropdown" role="button">
+                            <div class="2">
+                                <div>
+                                    <div>
+                                        <div>
+                                            <a href="#Apps-dropdown" role="button">
                                                 <img src="img/1x/apps-icon-sm.png">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="right-acct">
-                                    <div class="right-acct-1">
-                                        <a class="account" href="#Account" role="burron">
+                                <div>
+                                    <div>
+                                        <a href="#Account" role="button">
                                             <img src="img/1x/act-icon-sm.png">
                                         </a>
                                     </div>
                                 </div>
                             </div>
+                            <div class="3">
+                                <div>
+                                    <div>
+                                        <img src="img/2x/act-icon-lg.png">
+                                    </div>
+                                    <div>
+                                        <div>Account</div>
+                                        <div>email@email.com</div>
+                                        <a href="#Account">Manage your Google Account</a>
+                                    </div>
+                                </div>
+                                <div>
+                                    <a href="Account">
+                                        <div>
+                                            <img src="img/1x/act-icon-sm.png">
+                                            <span>Add another account</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#Sign-out">Sign out of all accounts</a>
+                                </div>
+                                <div>
+                                    <a href="#Privacy-Policy">Privacy Policy</a>
+                                    <a>•</a>
+                                    <a href="Terms-of-Service">Terms of Service</a>
+                                </div>
+                            </div>
+                            <div class="4">
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <a href="#Account">
+                                                <div>
+                                                    <img src="img/2x/act-icon-lg.png">
+                                                    <span>Account</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Gmail">
+                                                <div>
+                                                    <img src="img/2x/gmail-icon-lg.png">
+                                                    <span>Gmail</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Drive">
+                                                <div>
+                                                    <img src="img/2x/gdrive-icon-lg.png">
+                                                    <span>Drive</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Search">
+                                                <div>
+                                                    <img src="img/2x/search-icon-lg.png">
+                                                    <span>Search</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#YouTube">
+                                                <div>
+                                                    <img src="img/2x/youtube-icon-lg.png">
+                                                    <span>YouTube</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#PlayStore">
+                                                <div>
+                                                    <img src="img/2x/store-icon-lg.png">
+                                                    <span>Play</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Maps">
+                                                <div>
+                                                    <img src="img/2x/maps-icon-lg.png">
+                                                    <span>Maps</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Calendar">
+                                                <div>
+                                                    <img src="img/2x/cal-icon-lg.png">
+                                                    <span>Calendar</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Translate">
+                                                <div>
+                                                    <img src="img/2x/trans-icon-lg.png">
+                                                    <span>Translate</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Photos">
+                                                <div>
+                                                    <img src="img/2x/photos-icon-lg.png">
+                                                    <span>Photos</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#News">
+                                                <div>
+                                                    <img src="img/2x/news-icon-lg.png">
+                                                    <span>News</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#Meet">
+                                                <div>
+                                                    <img src="img/2x/hangouts-icon-lg.png">
+                                                    <span>Meet</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div>
+                                        <a href="#More-from-google">More from Google</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="google-logo">
-                <div class="google-logo-2">
-                    <img id="google-logo" src="/img/google-logo.png" alt="Google Logo">
+            <div>
+                <div>
+                    <img src="/img/google-logo.png">
                 </div>
             </div>
-            <div class="search">
+            <div>
                 <form action="/search" role="search">
                     <div>
-                        <div class="search-1">
-                            <div class="search-2">
-                                <div class="search-3">
-                                    <div class="search-icon">
-                                        <img src="/img/1x/search-icon-sm.png" id="search-icon-sm">
+                        <div>
+                            <div>
+                                <div>
+                                    <div>
+                                        <img src="/img/1x/search-icon-sm.png">
                                     </div>
-                                    <div class="search-box">
-                                        <div class="search-box-2"></div>
-                                        <input id="search-box" type="text">
+                                    <div>
+                                        <input type="text">
                                     </div>
-                                    <div class="mic-icon">
-                                        <a id="mic-icon" href="#Voice-Search" role="button"><img src="img/1x/mic-icon-sm.png" id="mic-icon-sm"></a>
+                                    <div>
+                                        <a href="#Voice-Search" role="button">
+                                            <img src="img/1x/mic-icon-sm.png">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="search-button">
-                                <center>
-                                    <input type="submit" class="google-search" id="search-submit" value="Google search">
-                                    <input type="submit" class="feeling-lucky" id="lucky-submit" value="I'm Feeling Lucky">
-                                </center>
+                                <span>
+                                    <input type="submit" value="Google search">
+                                    <input type="submit" value="I'm Feeling Lucky">
+                                </span>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="empty"></div>
-            <div class="footer">
-                <div class="footer left-footer">
-                    <a id="advertising" role="button" href="#Advertising">Advertising</a>
-                    <a id="business" role="button" href="#Business">Business</a>
-                    <a id="how-search-works" role="button" href="How Search works">How Search works</a>
+            <div></div>
+            <div>
+                <div>
+                    <a role="button" href="#Advertising">Advertising</a>
+                    <a role="button" href="#Business">Business</a>
+                    <a role="button" href="How Search works">How Search works</a>
                 </div>
-                <div class="footer center-footer">
-                    <a class="carbon-neutral" href="#Carbon-neutral">
-                        <img src="img/leaf.png" id="carbon-neutral-leaf">
-                        <span class="carbon-neutral-since">Carbon neutral since 2007</span>
+                <div>
+                    <a href="#Carbon-neutral">
+                        <img src="img/leaf.png">
+                        <span>Carbon neutral since 2007</span>
                     </a>
                 </div>
-                <div class="footer right-footer">
-                    <a class="privacy-terms" role="button" href="#Privacy">Privacy</a>
-                    <a class="privacy-terms" role="button" href="Terms">Terms</a>
-                    <div class="settings">
-                        <button class="settings-button">Settings</button>
-                        <ul class="settings-menu" role="menu">
+                <div>
+                    <a role="button" href="#Privacy">Privacy</a>
+                    <a role="button" href="Terms">Terms</a>
+                    <div>
+                        <button>Settings</button>
+                        <ul role="menu">
                             <li>
-                                <a class="settings-options" href="#Search-settings" role="menuitem">Search settings</a>
+                                <a href="#Search-settings" role="menuitem">Search settings</a>
                             </li>
                             <li>
-                                <a class="settings-options" href="#Advanced-search" role="menuitem">Advanced search</a>
+                                <a href="#Advanced-search" role="menuitem">Advanced search</a>
                             </li>
                             <li>
-                                <a class="settings-options" href="#Your-data-in-search" role="menuitem">Your data in search</a>
+                                <a href="#Your-data-in-search" role="menuitem">Your data in search</a>
                             </li>
                             <li>
-                                <a class="settings-options" href="#Search-history" role="menuitem">Search history</a>
+                                <a href="#Search-history" role="menuitem">Search history</a>
                             </li>
                             <li>
-                                <a class="settings-options" href="#Search-help" role="menuitem">Search help</a>
+                                <a href="#Search-help" role="menuitem">Search help</a>
                             </li>
                             <li>
-                                <a class="settings-options" href="#Send-feedback" role="menuitem">Send feedback</a>
+                                <a href="#Send-feedback" role="menuitem">Send feedback</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     </body>
 </html>
